update gallery page

--- a/app/gallery.html
+++ b/app/gallery.html
@@ -191,6 +191,86 @@
 										<img src="img/content/2090007851.webp" class="gallery__image" alt="" />
 									</div>
 								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/21331327188.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/21314327180.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/2090007843.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/2090007851.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/21331327188.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/21314327180.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/2090007843.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/2090007851.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
 							</div>
 						</div>
 						<div class="gallery__row">
@@ -208,45 +288,127 @@
 									<use href="#arr-svg"></use>
 								</svg>
 							</button>
-							<div class="gallery__thumbs">
-								<div class="gallery__thumb">
-									<div class="gallery__image-wrap">
-										<img src="img/content/21331327188.webp" class="gallery__image" alt="" />
+							<div class="gallery__thumbs-wrap swiper">
+								<div class="gallery__thumbs swiper-wrapper">
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/21331327188.webp" class="gallery__image" alt="" />
+										</div>
 									</div>
-								</div>
-								<div class="gallery__thumb">
-									<div class="gallery__image-wrap">
-										<img src="img/content/21314327180.webp" class="gallery__image" alt="" />
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/21314327180.webp" class="gallery__image" alt="" />
+										</div>
 									</div>
-								</div>
-								<div class="gallery__thumb">
-									<div class="gallery__image-wrap">
-										<img src="img/content/2090007843.webp" class="gallery__image" alt="" />
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/2090007843.webp" class="gallery__image" alt="" />
+										</div>
 									</div>
-								</div>
-								<div class="gallery__thumb">
-									<div class="gallery__image-wrap">
-										<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+										</div>
 									</div>
-								</div>
-								<div class="gallery__thumb">
-									<div class="gallery__image-wrap">
-										<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
+										</div>
 									</div>
-								</div>
-								<div class="gallery__thumb">
-									<div class="gallery__image-wrap">
-										<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+										</div>
 									</div>
-								</div>
-								<div class="gallery__thumb">
-									<div class="gallery__image-wrap">
-										<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
+										</div>
 									</div>
-								</div>
-								<div class="gallery__thumb">
-									<div class="gallery__image-wrap">
-										<img src="img/content/2090007851.webp" class="gallery__image" alt="" />
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/2090007851.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/21331327188.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/21314327180.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/2090007843.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/2090007851.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/21331327188.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/21314327180.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/2090007843.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/2090007851.webp" class="gallery__image" alt="" />
+										</div>
 									</div>
 								</div>
 							</div>
