--- a/src/html/gallery.htm
+++ b/src/html/gallery.htm
@@ -7,7 +7,8 @@
             <img
               src="@img/content/21331327188.webp"
               class="gallery__image"
-              alt="" />
+              alt=""
+            />
           </div>
         </div>
         <div class="gallery__slide swiper-slide">
@@ -15,7 +16,8 @@
             <img
               src="@img/content/21314327180.webp"
               class="gallery__image"
-              alt="" />
+              alt=""
+            />
           </div>
         </div>
         <div class="gallery__slide swiper-slide">
@@ -23,7 +25,8 @@
             <img
               src="@img/content/2090007843.webp"
               class="gallery__image"
-              alt="" />
+              alt=""
+            />
           </div>
         </div>
         <div class="gallery__slide swiper-slide">
@@ -31,7 +34,8 @@
             <img
               src="@img/content/20900078411.webp"
               class="gallery__image"
-              alt="" />
+              alt=""
+            />
           </div>
         </div>
         <div class="gallery__slide swiper-slide">
@@ -39,7 +43,8 @@
             <img
               src="@img/content/2090007842.webp"
               class="gallery__image"
-              alt="" />
+              alt=""
+            />
           </div>
         </div>
         <div class="gallery__slide swiper-slide">
@@ -47,7 +52,8 @@
             <img
               src="@img/content/20900078411.webp"
               class="gallery__image"
-              alt="" />
+              alt=""
+            />
           </div>
         </div>
         <div class="gallery__slide swiper-slide">
@@ -55,7 +61,8 @@
             <img
               src="@img/content/2090007842.webp"
               class="gallery__image"
-              alt="" />
+              alt=""
+            />
           </div>
         </div>
         <div class="gallery__slide swiper-slide">
@@ -63,7 +70,152 @@
             <img
               src="@img/content/2090007851.webp"
               class="gallery__image"
-              alt="" />
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/21331327188.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/21314327180.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/2090007843.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/20900078411.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/2090007842.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/20900078411.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/2090007842.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/2090007851.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/21331327188.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/21314327180.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/2090007843.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/20900078411.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/2090007842.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/20900078411.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/2090007842.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/2090007851.webp"
+              class="gallery__image"
+              alt=""
+            />
           </div>
         </div>
       </div>
@@ -81,69 +233,223 @@
       <button class="gallery__controls-btn gallery__controls-btn_prev">
         <svg><use href="#arr-svg"></use></svg>
       </button>
-      <div class="gallery__thumbs">
-        <div class="gallery__thumb">
-          <div class="gallery__image-wrap">
-            <img
-              src="@img/content/21331327188.webp"
-              class="gallery__image"
-              alt="" />
+      <div class="gallery__thumbs-wrap swiper">
+        <div class="gallery__thumbs swiper-wrapper">
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/21331327188.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
           </div>
-        </div>
-        <div class="gallery__thumb">
-          <div class="gallery__image-wrap">
-            <img
-              src="@img/content/21314327180.webp"
-              class="gallery__image"
-              alt="" />
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/21314327180.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
           </div>
-        </div>
-        <div class="gallery__thumb">
-          <div class="gallery__image-wrap">
-            <img
-              src="@img/content/2090007843.webp"
-              class="gallery__image"
-              alt="" />
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/2090007843.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
           </div>
-        </div>
-        <div class="gallery__thumb">
-          <div class="gallery__image-wrap">
-            <img
-              src="@img/content/20900078411.webp"
-              class="gallery__image"
-              alt="" />
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/20900078411.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
           </div>
-        </div>
-        <div class="gallery__thumb">
-          <div class="gallery__image-wrap">
-            <img
-              src="@img/content/2090007842.webp"
-              class="gallery__image"
-              alt="" />
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/2090007842.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
           </div>
-        </div>
-        <div class="gallery__thumb">
-          <div class="gallery__image-wrap">
-            <img
-              src="@img/content/20900078411.webp"
-              class="gallery__image"
-              alt="" />
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/20900078411.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
           </div>
-        </div>
-        <div class="gallery__thumb">
-          <div class="gallery__image-wrap">
-            <img
-              src="@img/content/2090007842.webp"
-              class="gallery__image"
-              alt="" />
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/2090007842.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
           </div>
-        </div>
-        <div class="gallery__thumb">
-          <div class="gallery__image-wrap">
-            <img
-              src="@img/content/2090007851.webp"
-              class="gallery__image"
-              alt="" />
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/2090007851.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/21331327188.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/21314327180.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/2090007843.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/20900078411.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/2090007842.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/20900078411.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/2090007842.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/2090007851.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/21331327188.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/21314327180.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/2090007843.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/20900078411.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/2090007842.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/20900078411.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/2090007842.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/2090007851.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
           </div>
         </div>
       </div>
